--- a/HeadlessVidX/package.json
+++ b/HeadlessVidX/package.json
@@ -18,6 +18,7 @@
     "javascript-obfuscator": "^4.1.1",
     "playwright-extra": "^4.3.6",
     "playwright-extra-plugin-stealth": "^0.0.1",
+    "prettier": "^3.6.2",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "user-agents": "^1.1.212",
     "ws": "^8.17.0"
