--- a/Dockerfile.php_x64
+++ b/Dockerfile.php_x64
@@ -34,9 +34,10 @@ WORKDIR /var/www/html/
 
 # Ensure correct permissions for web server
 RUN chown -R www-data:www-data /var/www/html/
+RUN chmod -R 755 /var/www/html/
 
 # Expose port 80 for Apache
-EXPOSE 80
+EXPOSE 80 3202
 
 # Command to run Apache in the foreground
 CMD ["apache2-foreground"]
