--- a/.dockerignore
+++ b/.dockerignore
@@ -39,7 +39,7 @@ Thumbs.db
 # Example: 
 # config.php # If you are using env vars and don't want the local config copied
 # videos/
-HeadlessVidX/
+HeadlessVidX/HeadlessVidX.exe
 docker-compose.arm64.yml
 docker-compose.x64.yml
 Dockerfile.php_arm64
