--- a/docker-compose.arm64.yml
+++ b/docker-compose.arm64.yml
@@ -1,18 +1,19 @@
 #version: "3.8"
 
 services:
-  php_app:
+  tmdb:
     build:
       context: .
-      dockerfile: Dockerfile.php_arm64
+      dockerfile: Dockerfile.${DOCKERARMOS}
 #      platform: linux/arm64
-    container_name: TMDB_VOD
-    image: ${TMDBPHPIMAGE}
+    container_name: tmdb
+    hostname: tmdb
+    image: ${TMDBPHPIMAGE}.${DOCKERARMOS}
     ports:
       - "8080:80"
+      - "3202:3202"
     volumes:
-#      - .:/var/www/html/  # Mount project directory for live code changes
-      - tmdb_php_data:/var/www/html/data # New volume for PHP app data (logs, cache, etc.)
+      - tmdb_php_data:/var/www/html/data:rw # New volume for PHP app data (logs, cache, etc.)
     environment:
       # TMDB Settings
       - TMDB_API_KEY=${TMDB_API_KEY}
@@ -26,33 +27,36 @@ services:
       # Feature Flags
       - INCLUDE_ADULT_VOD=${INCLUDE_ADULT_VOD}
       - CREATE_PLAYLIST=${CREATE_PLAYLIST}
-    depends_on:
-      - headlessvidx
     restart: unless-stopped
     networks:
-      - cosmos-tmdb-default
+      cosmos-tmdb-default:
 
   headlessvidx:
     build:
       context: ./HeadlessVidX
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.${DOCKERARMOS}
 #      platform: linux/arm64
-    container_name: HeadlessVidX
-    image: ${HEADLESSVIDXIMAGE} # Keep this if you want to use the pre-built image as a fallback or for specific architectures
-    ports:
-      - "3202:3202"
+    container_name: headlessvidx
+    image: ${HEADLESSVIDXIMAGE}.${DOCKERARMOS} # Keep this if you want to use the pre-built image as a fallback or for specific architectures
+#    ports:
+#      - "3202:3202"
     volumes:
-      - headlessvidx_data:/app/dict # Changed from vidx_files to headlessvidx_data
+      - headlessvidx_data:/app/files # Changed from vidx_files to headlessvidx_data
+      - video_tmp:/app/videos_tmp:rw
     environment:
       - PORT=${PORT}
       - SHOW_BROWSER=${SHOW_BROWSER}
       - HEADLESS_PROXY=${HEADLESS_PROXY}
       - USE_STEALTH_PLUGIN=${USE_STEALTH_PLUGIN}
 #      - FIREFOX_EXECUTABLE_PATH=${FIREFOX_EXECUTABLE_PATH}
-#      - VIDEO_TMP_DIR=${VIDEO_TMP_DIR}
+      - VIDEO_TMP_DIR=${VIDEO_TMP_DIR}
     restart: unless-stopped
-    networks:
-      - cosmos-tmdb-default
+    network_mode: "service:tmdb"
+#    networks:
+#      cosmos-tmdb-default:
+#          - ipv4_address: 172.19.0.11
+    depends_on:
+      - tmdb
 
 networks:
   cosmos-tmdb-default:
@@ -67,5 +71,9 @@ volumes:
     external: false
   headlessvidx_data: # Changed from vidx_files
     name: headlessvidx_data
+    driver: local
+    external: false
+  video_tmp:
+    name: video_tmp
     driver: local
     external: false
