--- a/docker-compose.arm64.yml
+++ b/docker-compose.arm64.yml
@@ -49,7 +49,7 @@ services:
       - SHOW_BROWSER=${SHOW_BROWSER}
       - HEADLESS_PROXY=${HEADLESS_PROXY}
       - USE_STEALTH_PLUGIN=${USE_STEALTH_PLUGIN}
-#      - FIREFOX_EXECUTABLE_PATH=${FIREFOX_EXECUTABLE_PATH}
+      - FIREFOX_EXECUTABLE_PATH=${FIREFOX_EXECUTABLE_PATH}
       - VIDEO_TMP_DIR=${VIDEO_TMP_DIR}
     restart: unless-stopped
     network_mode: "service:tmdb"
